force-app/main/default/objects/Update_Settings__c/Update_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Update Settings</label>
</CustomObject>