force-app/main/default/objects/Update_Settings__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activity</label>
    <type>Checkbox</type>
</CustomField>