force-app/main/default/objects/Update_Settings__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>true</defaultValue>
    <description>main_establishment_number, indication_main_establishment</description>
    <label>Branch</label>
    <type>Checkbox</type>
</CustomField>