force-app/main/default/objects/Update_Settings__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Capital</label>
    <type>Checkbox</type>
</CustomField>