force-app/main/default/objects/Update_Settings__c/fields/ChamberNo__c.field-meta.xml
<CustomField>
    <fullName>ChamberNo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>chamber_number</description>
    <label>ChamberNo</label>
    <type>Checkbox</type>
</CustomField>