force-app/main/default/objects/Update_Settings__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>telephone_number, domain_name, mobile_number</description>
    <label>Contact</label>
    <type>Checkbox</type>
</CustomField>