force-app/main/default/objects/Update_Settings__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <defaultValue>true</defaultValue>
    <description>contact_title1, contact_title2, contact_initials, contact_prefix, contact_surname, contact_gender</description>
    <label>ContactPerson</label>
    <type>Checkbox</type>
</CustomField>