force-app/main/default/objects/Update_Settings__c/fields/CorrespondenceAddress__c.field-meta.xml
<CustomField>
    <fullName>CorrespondenceAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <description>correspondence_street, correspondence_house_number, correspondence_house_number_addition, correspondence_postcode, correspondence_city, correspondence_country</description>
    <label>CorrespondenceAddress</label>
    <type>Checkbox</type>
</CustomField>