force-app/main/default/objects/Update_Settings__c/fields/Establishment__c.field-meta.xml
<CustomField>
    <fullName>Establishment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Establishment</label>
    <type>Checkbox</type>
</CustomField>