force-app/main/default/objects/Update_Settings__c/fields/EstablishmentAddress__c.field-meta.xml
<CustomField>
    <fullName>EstablishmentAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>EstablishmentAddress</label>
    <type>Checkbox</type>
</CustomField>