force-app/main/default/objects/Update_Settings__c/fields/FinancialStatus__c.field-meta.xml
<CustomField>
    <fullName>FinancialStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FinancialStatus</label>
    <type>Checkbox</type>
</CustomField>