force-app/main/default/objects/Update_Settings__c/fields/ImportExport__c.field-meta.xml
<CustomField>
    <fullName>ImportExport__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ImportExport</label>
    <type>Checkbox</type>
</CustomField>