force-app/main/default/objects/Update_Settings__c/fields/Legalform__c.field-meta.xml
<CustomField>
    <fullName>Legalform__c</fullName>
    <defaultValue>true</defaultValue>
    <description>legal_form_code, indication_organisation_code</description>
    <label>Legalform</label>
    <type>Checkbox</type>
</CustomField>