force-app/main/default/objects/Update_Settings__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Name</label>
    <type>Checkbox</type>
</CustomField>