force-app/main/default/objects/Update_Settings__c/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>