force-app/main/default/objects/Update_Settings__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <defaultValue>true</defaultValue>
    <description>personnel, class_personnel, personnel_fulltime, class_personnel_fulltime, personnel_reference_date</description>
    <label>Personnel</label>
    <type>Checkbox</type>
</CustomField>