force-app/main/default/objects/Update_Settings__c/fields/Removed__c.field-meta.xml
<CustomField>
    <fullName>Removed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Removed</label>
    <type>Checkbox</type>
</CustomField>