force-app/main/default/objects/Update_Settings__c/fields/RSIN__c.field-meta.xml
<CustomField>
    <fullName>RSIN__c</fullName>
    <defaultValue>true</defaultValue>
    <description>rsin_number: the owner/holder(s) identification number (`Rechtspersonen Samenwerkingsverbanden Informatie Nummer`) has changed.</description>
    <label>RSIN</label>
    <type>Checkbox</type>
</CustomField>