force-app/main/default/objects/Update_Settings__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>indication_economically_active, indication_non_mailing</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>