force-app/main/default/objects/Update_Settings__c/fields/SubscriptionDates__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionDates__c</fullName>
    <defaultValue>true</defaultValue>
    <description>founding_date, continuation_date, establishment_date</description>
    <label>SubscriptionDates</label>
    <type>Checkbox</type>
</CustomField>