force-app/main/default/objects/Update_Settings__c/fields/Subsidiaries__c.field-meta.xml
<CustomField>
    <fullName>Subsidiaries__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that one or more establishments are added or removed for a dossier</description>
    <label>Subsidiaries</label>
    <type>Checkbox</type>
</CustomField>