force-app/main/default/objects/Update_Settings__c/fields/Tradenames__c.field-meta.xml
<CustomField>
    <fullName>Tradenames__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tradenames</label>
    <type>Checkbox</type>
</CustomField>